<resources>
    <string name="app_name">CryptoFlow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_menu_media">Media</string>
    <string name="navigation_menu_flow">Flow</string>
    <string name="navigation_menu_convert">Convert</string>
    <string name="image_recycler_coin_item">logo_coin</string>
    <string name="image_recycler_news_item">image_article</string>
    <string name="hint_search_numbers">Convert Number</string>
    <string name="convert_button">Convert</string>
    <string name="convert_image">Image Coin</string>
    <string name="image_convert">Image convert</string>
    <string name="Toast_no_number_value">Merci de renseigner un nombre à convertir</string>
</resources>