<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_convert"
        android:enabled="true"
        android:icon="@drawable/round_compare_arrows_24"
        android:title="@string/navigation_menu_convert"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/round_home_24"
        android:title="@string/navigation_menu_flow"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_news"
        android:enabled="true"
        android:icon="@drawable/round_newspaper_24"
        android:title="@string/navigation_menu_media"
        app:showAsAction="ifRoom" />
</menu>