<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConvertFrag">

    <EditText
        android:id="@+id/search_number"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_search_numbers"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/hint_search_numbers" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="218dp"
        android:layout_height="59dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/search_number"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_convert"
        android:layout_width="333dp"
        android:layout_height="61dp"
        android:layout_marginTop="76dp"
        android:text="@string/convert_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <ImageView
        android:id="@+id/convert_image"
        android:layout_width="185dp"
        android:layout_height="154dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_convert"
        android:contentDescription="@string/convert_image" />

    <TextView
        android:id="@+id/convert_number"
        android:layout_width="265dp"
        android:layout_height="83dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_convert" />

    <TextView
        android:id="@+id/convert_coin"
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convert_image" />

    <ImageView
        android:id="@+id/image_convert"
        android:layout_width="132dp"
        android:layout_height="99dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convert_coin"
        app:srcCompat="@drawable/ic_round_convert_24"
        android:contentDescription="@string/image_convert" />


</androidx.constraintlayout.widget.ConstraintLayout>